T02-Terraform-resources/02-Terraform-resources-behavior/02-resource-meta-arguments/01-depends_on/eip.tf
resource "aws_eip" "static-ip" {
    instance = aws_instance.web.id
    vpc = true
    depends_on = [aws_internet_gateway.igw]
}
