T02-Terraform-resources/02-Terraform-resources-behavior/02-resource-meta-arguments/01-depends_on/security.tf
resource "aws_security_group" "allow_http_ssh" {
    name = "allow-http-ssh"
    description = "Allow Ingress rules to allow SSH and HTTP connections"
    vpc_id  = aws_vpc.id
}
