T02-Terraform-resources/02-Terraform-resources-behavior/02-resource-meta-arguments/01-depends_on/security-rule.tf
resource "aws_security_group_rule" "ingress_ssh" {
type                = "ingress"
from_port           = 22
to_port             = 22
protocol            = "tcp"
cidr_blocks         = ["0.0.0.0/0"]
security_group_id   = aws_security_group.allow_http_ssh.id
}

resource "aws_security_group_rule" "ingress_http" {
type               = "ingress"
from_port          = 80
to_port            = 80
protocol           = "tcp"
cidr_blocks        = ["0.0.0.0/0"]
security_group_id  = aws_security_group.allow_http_ssh.id
}

resource "aws_security_group_rule" "egress_allow_all" {
type                = "egress"
to_port             = 0
protocol            = "-1"
from_port           = 0
cidr_blocks         = ["0.0.0.0/0"]
security_group_id   = aws_security_group.allow_http_ssh.id
}
